feat: AGREGADO DE DESAFIOS DEL TP

--- a/TRABAJO PRACTICO 01-25.ipynb
+++ b/TRABAJO PRACTICO 01-25.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "1f672e6d",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "3f6c4e77",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "70893a25",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "49e4b92c",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "d5ebbbd7",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "2eeb6e4c",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "f7ee1bac",
    "metadata": {},
    "outputs": [
@@ -622,6 +622,111 @@
     "plt.grid(True)\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58001fb9",
+   "metadata": {},
+   "source": [
+    "<h2>DESAFIO 1</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae1fd658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49d52d6d061a4f43a91d1ffa2daf87d4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=100.0, description='Ordenada (a)', max=150.0, min=50.0), Output()), _d…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import interact, FloatSlider\n",
+    "\n",
+    "# Función interactiva para graficar la curva de demanda con un intercepto ajustable\n",
+    "def graficar_demanda_interactiva(a):\n",
+    "    Q_interactiva = demanda(P, a=a, b=-2)\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.plot(Q_interactiva, P, label=f'Demanda (a={a:.2f})', color='purple')\n",
+    "    plt.title('Impacto del cambio en la ordenada al origen (a)')\n",
+    "    plt.xlim(0, 200)\n",
+    "    plt.ylim(0, 100)\n",
+    "    plt.xlabel('Cantidad (Q)')\n",
+    "    plt.ylabel('Precio (P)')\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "interact(graficar_demanda_interactiva, a=FloatSlider(value=100, min=50, max=150, step=0.1, description='Ordenada (a)'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7c4f575",
+   "metadata": {},
+   "source": [
+    "<h2>DESAFIO 2 </h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b1f16855",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "604ed874cc9c4b33823f257d0c01a683",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=-2.0, description='Pendiente (b)', max=0.0, min=-10.0, step=1.0), Outp…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.graficar_demanda_pendiente(b)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def graficar_demanda_pendiente(b):\n",
+    "    Q_interactiva = demanda(P, a=100, b=b)\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.plot(Q_interactiva, P, label=f'Demanda (b={b:.2f})', color='green')\n",
+    "    plt.title('Impacto del cambio en la pendiente (b)')\n",
+    "    plt.xlim(0, 200)\n",
+    "    plt.ylim(0, 100)\n",
+    "    plt.xlabel('Cantidad (Q)')\n",
+    "    plt.ylabel('Precio (P)')\n",
+    "    plt.grid(True)\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "interact(graficar_demanda_pendiente, b=FloatSlider(value=-2, min=-10, max=0, step=1, description='Pendiente (b)'))"
    ]
   }
  ],
