agregado de integrantes

--- a/TRABAJO PRACTICO 01-25.ipynb
+++ b/TRABAJO PRACTICO 01-25.ipynb
@@ -5,7 +5,15 @@
    "id": "9d847fa9",
    "metadata": {},
    "source": [
-    "<h2><strong>Función de Demanda - Análisis Económico</strong></h2>"
+    "<h2><strong>Función de Demanda - Análisis Económico</strong></h2>\n",
+    "\n",
+    "<h3>INTEGRANTES</h3>\n",
+    "<ul><h4>\n",
+    "    <li>Albarracin Ignacio</li>\n",
+    "    <li>Alcazar Rafael</li>\n",
+    "    <li>Castillo Barbara</li>\n",
+    "    <li>Sosa Leandro</li>\n",
+    "</h4></ul>"
    ]
   },
   {
